--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "1.15.6",
     "method-override": "2.3.10",
     "minimatch": "3.0.4",
+    "multer": "^1.3.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "pg": "7.3.0",
