--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.16.1",
     "express-handlebars": "3.0.0",
     "express-session": "1.15.6",
+    "materialize-stepper": "^2.1.4",
     "method-override": "2.3.10",
     "minimatch": "3.0.4",
     "multer": "^1.3.0",
