--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pg-hstore": "2.3.2",
     "sequelize": "4.13.3",
     "sequelize-cli": "3.0.0",
-    "speakingurl": "14.0.1"
+    "speakingurl": "14.0.1",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
