developer can now review customer

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sequelize": "4.13.3",
     "sequelize-cli": "3.0.0",
     "speakingurl": "14.0.1",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "dateformat": "3.0.2"
   },
   "devDependencies": {
     "chai": "3.5.0",
